--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.5
   flutter_spinkit: ^5.1.0
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
