--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.13.5
   flutter_spinkit: ^5.1.0
   intl: ^0.17.0
+  font_awesome_flutter: ^10.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
