--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   intl: ^0.17.0
   font_awesome_flutter: ^10.2.1
+  geolocator: ^9.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
